# pswtf

./: .gitignore  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: cleanup-stale-dmg-mounts.sh
src-tauri/src/: main.rs
ui/: app.js  index.html  styles.css
